<resources>
    <string name="app_name">OCR Gallery</string>
    <string name="low_storage_error">make sure you have atleast 10mbz freespace on your internal storage</string>
    <string name="search">GO</string>
    <string name="clear_search">clear</string>
    <string name="image_of">%1$d of %2$d</string>
    <string name="search_hint">Search for memes</string>
    <string name="guess_ill_die_meme">Guess ill die meme</string>
    <string name="creepy_pepe">Pepe The Frog</string>
    <string name="search_remotely_text_label">Going \"here kitty kitty!\" at the remote server...</string>
    <string name="no_search_results_text_label">Sorry, couldn\'t find anything :(</string>
    <string name="an_error_occurred">An error occurred. Please try again later.</string>
    <string name="find_memes_screen_label">Find Memes</string>

    <string name="no_memes_found">No memes found</string>
    <string name="initial_search_text_label">Use the above search field to find your meme!</string>





    <!--admob ids-->
    <string name="admob_app_id" translatable="false">ca-app-pub-2151402137157381~7121535252</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-2151402137157381/6055865599</string>
    <string name="admob_interstitial" translatable="false">ca-app-pub-2151402137157381/7335938690</string>
    <string name="admob_openads" translatable="false">ca-app-pub-2151402137157381/4136087957</string>
    <string name="admob_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_test_inter" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_test_rcyc" translatable="false">ca-app-pub-3940256099942544/4177191030</string>

</resources>
